cmake_minimum_required(VERSION 3.2.0)
project(code_practice)
add_compile_options(-std=c++11)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/binary)
add_subdirectory(adt_stack)
add_subdirectory(adt_queue)
add_subdirectory(chaining_hash_table_mod)
add_subdirectory(complete_binary_tree)
add_subdirectory(fibonacci)
add_subdirectory(linked_list)
add_subdirectory(movie)
add_subdirectory(permutation_combination)
add_subdirectory(shortest_path)
add_subdirectory(sorting)
add_subdirectory(string)
add_subdirectory(subset)
add_subdirectory(trie)
